[fix]#8440 help align in navbar

--- a/css/icons.less
+++ b/css/icons.less
@@ -969,6 +969,11 @@ i.help-large::before, i.type.help::before, i.help::before{
   content: '\e835';
   cursor: pointer;
 }
+nav.horizontal > a i.help:before{
+    font-size: 34px;
+    line-height: 62px;
+}
+
 
 i.disconnect-large, i.disconnect.cas, i.disconnect{
   .fonticon;
